# cookiecutter-dagster-docker-compose

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
stash/{{cookiecutter.project_name}}/: .env  README.md  pyproject.toml  setup.py
stash/{{cookiecutter.project_name}}/Dockerfile_dagster/: requirements.txt  workspace.yaml
stash/{{cookiecutter.project_name}}/Dockerfile_user_code/: Dockerfile_user_code  requirements.txt
{{cookiecutter.project_name}}/: .gitignore  README.md  dagster.yaml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  workspace.local.yaml  workspace.yaml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.envs/: .local  .production
{{cookiecutter.project_name}}/Dockerfile_dagster/: Dockerfile_dagster  dagster.yaml
{{cookiecutter.project_name}}/Dockerfile_user_code/: Dockerfile_user_code
{{cookiecutter.project_name}}/docker/: dagster-requirements.txt  dagster.Dockerfile  user_code.Dockerfile
{{cookiecutter.project_name}}/requirements/: user_code.txt
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: assets.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/schedules/: example_schedule.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/jobs/: example_job.py
{{cookiecutter.project_slug}}/: .env  README.md  docker-compose.yml
{{cookiecutter.project_slug}}/tests/: test_deploy_docker.py
